[gd_scene load_steps=10 format=3 uid="uid://d2g07x6vffgg8"]

[ext_resource type="PackedScene" uid="uid://d2ch6i0cb7qvv" path="res://player.tscn" id="1_ajobc"]
[ext_resource type="Script" path="res://world.gd" id="1_i6e4c"]
[ext_resource type="PackedScene" uid="uid://1yqnrdg468fg" path="res://level_tile_map.tscn" id="2_80cxx"]
[ext_resource type="Texture2D" uid="uid://bxhjub2gosuxm" path="res://assets/art/1coin.png" id="2_bx4xa"]
[ext_resource type="FontFile" uid="uid://bbx7k7pgqf2cu" path="res://assets/fonts/Poco.ttf" id="2_ypiim"]
[ext_resource type="Texture2D" uid="uid://ygwqqnwvp81v" path="res://assets/art/level_timer_bar.png" id="3_yadep"]
[ext_resource type="Texture2D" uid="uid://dh3auanhpmaum" path="res://assets/art/empty_level_timer_bar.png" id="4_platf"]
[ext_resource type="PackedScene" uid="uid://mqbvhvjex0o5" path="res://enemyspawner.tscn" id="6_c8ftd"]

[sub_resource type="LabelSettings" id="LabelSettings_un80f"]
font = ExtResource("2_ypiim")
font_size = 10
font_color = Color(0.775063, 0.775063, 0.775063, 1)
shadow_size = 0

[node name="World" type="Node2D"]
script = ExtResource("1_i6e4c")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -246.0
offset_top = -124.0
offset_right = 248.0
offset_bottom = 149.0

[node name="CoinIcon" type="TextureRect" parent="GUI"]
layout_mode = 0
offset_left = 86.0
offset_top = 42.0
offset_right = 101.0
offset_bottom = 58.0
texture = ExtResource("2_bx4xa")
expand_mode = 1
stretch_mode = 4

[node name="Coins" type="Label" parent="GUI/CoinIcon"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 15.0
offset_top = -1.0
offset_right = 26.0
offset_bottom = 13.0
text = "x0"
label_settings = SubResource("LabelSettings_un80f")

[node name="Lives" type="Label" parent="GUI"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 101.0
offset_top = 29.0
offset_right = 112.0
offset_bottom = 43.0
text = "x3"
label_settings = SubResource("LabelSettings_un80f")

[node name="LevelTimeBar" type="TextureProgressBar" parent="GUI"]
layout_mode = 0
offset_left = 118.0
offset_top = 2.0
offset_right = 374.0
offset_bottom = 16.0
max_value = 80.0
value = 80.0
texture_under = ExtResource("4_platf")
texture_progress = ExtResource("3_yadep")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, 15.815)
zoom = Vector2(1.31, 1.31)

[node name="PlayerSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 13)

[node name="Player" parent="." instance=ExtResource("1_ajobc")]
position = Vector2(0, 13)

[node name="TileMapContainer" type="Node2D" parent="."]

[node name="BackgroundTileMap" parent="TileMapContainer" instance=ExtResource("2_80cxx")]
layer_0/tile_data = PackedInt32Array(393212, 0, 0, 327676, 0, 0, 262140, 0, 0, 196604, 0, 0, 131068, 0, 0, 65532, 0, 0, -4, 0, 0, -65540, 0, 0, -131076, 0, 0, -196612, 0, 0, -262148, 0, 0, -327684, 0, 0, -393220, 0, 0, -393221, 0, 0, -393222, 0, 0, -393223, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 0, 0, 524280, 0, 0, 589816, 0, 0, 589817, 0, 0, 524281, 0, 0, 458745, 0, 0, 393209, 0, 0, 327673, 0, 0, 262137, 0, 0, 196601, 0, 0, 131065, 0, 0, 65529, 0, 0, -7, 0, 0, -65543, 0, 0, -131079, 0, 0, -196615, 0, 0, -262151, 0, 0, -327687, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, 458746, 0, 0, 524282, 0, 0, 589818, 0, 0, 589819, 0, 0, 524283, 0, 0, 458747, 0, 0, 393211, 0, 0, 327675, 0, 0, 262139, 0, 0, 196603, 0, 0, 131067, 0, 0, 65531, 0, 0, -5, 0, 0, -65541, 0, 0, -131077, 0, 0, -196613, 0, 0, -262149, 0, 0, -327685, 0, 0, 458748, 0, 0, 524284, 0, 0, 589820, 0, 0, 589821, 0, 0, 524285, 0, 0, 458749, 0, 0, 393213, 0, 0, 327677, 0, 0, 262141, 0, 0, 196605, 0, 0, 131069, 0, 0, 65533, 0, 0, -3, 0, 0, -65539, 0, 0, -131075, 0, 0, -196611, 0, 0, -262147, 0, 0, -327683, 0, 0, -393219, 0, 0, -393218, 0, 0, -327682, 0, 0, -262146, 0, 0, -196610, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, 262142, 0, 0, 327678, 0, 0, 393214, 0, 0, 458750, 0, 0, 524286, 0, 0, 589822, 0, 0, 589823, 0, 0, 524287, 0, 0, 458751, 0, 0, 393215, 0, 0, 327679, 0, 0, 262143, 0, 0, 196607, 0, 0, 131071, 0, 0, 65535, 0, 0, -1, 0, 0, -65537, 0, 0, -131073, 0, 0, -196609, 0, 0, -262145, 0, 0, -327681, 0, 0, -393217, 0, 0, -458752, 0, 0, -393216, 0, 0, -327680, 0, 0, -262144, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 524289, 0, 0, 458753, 0, 0, 393217, 0, 0, 327681, 0, 0, 262145, 0, 0, 196609, 0, 0, 131073, 0, 0, 65537, 0, 0, 1, 0, 0, -65535, 0, 0, -131071, 0, 0, -196607, 0, 0, -262143, 0, 0, -327679, 0, 0, -393215, 0, 0, -458751, 0, 0, -458750, 0, 0, -393214, 0, 0, -327678, 0, 0, -262142, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 0, 0, 327682, 0, 0, 393218, 0, 0, 458754, 0, 0, 524290, 0, 0, 524291, 0, 0, 458755, 0, 0, 393219, 0, 0, 327683, 0, 0, 262147, 0, 0, 196611, 0, 0, 131075, 0, 0, 65539, 0, 0, 3, 0, 0, -65533, 0, 0, -131069, 0, 0, -196605, 0, 0, -262141, 0, 0, -327677, 0, 0, -393213, 0, 0, -458749, 0, 0, -458748, 0, 0, -393212, 0, 0, -327676, 0, 0, -262140, 0, 0, -196604, 0, 0, -131068, 0, 0, -65532, 0, 0, 4, 0, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 0, 0, 327684, 0, 0, 393220, 0, 0, 458756, 0, 0, 524292, 0, 0, 524293, 0, 0, 458757, 0, 0, 393221, 0, 0, 327685, 0, 0, 262149, 0, 0, 196613, 0, 0, 131077, 0, 0, 65541, 0, 0, 5, 0, 0, -65531, 0, 0, -131067, 0, 0, -196603, 0, 0, -262139, 0, 0, -327675, 0, 0, -393211, 0, 0, -458747, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 458758, 0, 0, 524294, 0, 0, 524295, 0, 0, 458759, 0, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 196615, 0, 0, 131079, 0, 0, 65543, 0, 0, 7, 0, 0, -65529, 0, 0, -131065, 0, 0, -196601, 0, 0, -262137, 0, 0, -327673, 0, 0, -393209, 0, 0, -458745, 0, 0, 524277, 131072, 0, 458741, 131072, 0, 393205, 131072, 0, 327669, 131072, 0, 262133, 131072, 0, 196597, 131072, 0, 131061, 131072, 0, 65525, 131072, 0, -11, 131072, 0, -65547, 131072, 0, -131083, 131072, 0, -196619, 131072, 0, -262155, 131072, 0, -327691, 131072, 0, -393227, 131072, 0, -458763, 131072, 0, -458764, 131072, 0, -458765, 131072, 0, -458766, 131072, 0, -458767, 131072, 0, -458768, 131072, 0, -393232, 131072, 0, -327696, 131072, 0, -262160, 131072, 0, -196624, 131072, 0, -131088, 131072, 0, -65552, 131072, 0, -16, 131072, 0, 65520, 131072, 0, 131056, 131072, 0, 196592, 131072, 0, 262128, 131072, 0, 327664, 131072, 0, 393200, 131072, 0, 458736, 131072, 0, 524272, 131072, 0, 589808, 131072, 0, 655344, 131072, 0, 655345, 131072, 0, 589809, 131072, 0, 524273, 131072, 0, 458737, 131072, 0, 393201, 131072, 0, 327665, 131072, 0, 262129, 131072, 0, 196593, 131072, 0, 131057, 131072, 0, 65521, 131072, 0, -15, 131072, 0, -65551, 131072, 0, -131087, 131072, 0, -196623, 131072, 0, -262159, 131072, 0, -327695, 131072, 0, -393231, 131072, 0, -393230, 131072, 0, -327694, 131072, 0, -262158, 131072, 0, -196622, 131072, 0, -131086, 131072, 0, -65550, 131072, 0, -14, 131072, 0, 65522, 131072, 0, 131058, 131072, 0, 196594, 131072, 0, 262130, 131072, 0, 327666, 131072, 0, 393202, 131072, 0, 458738, 131072, 0, 524274, 131072, 0, 589810, 131072, 0, 655346, 131072, 0, 655347, 131072, 0, 589811, 131072, 0, 524275, 131072, 0, 458739, 131072, 0, 393203, 131072, 0, 327667, 131072, 0, 262131, 131072, 0, 196595, 131072, 0, 131059, 131072, 0, 65523, 131072, 0, -13, 131072, 0, -65549, 131072, 0, -131085, 131072, 0, -196621, 131072, 0, -262157, 131072, 0, -327693, 131072, 0, -393229, 131072, 0, -393228, 131072, 0, -327692, 131072, 0, -262156, 131072, 0, -196620, 131072, 0, -131084, 131072, 0, -65548, 131072, 0, -12, 131072, 0, 65524, 131072, 0, 131060, 131072, 0, 196596, 131072, 0, 262132, 131072, 0, 327668, 131072, 0, 393204, 131072, 0, 458740, 131072, 0, 524276, 131072, 0, 589812, 131072, 0, 655348, 131072, 0, 655349, 131072, 0, 589813, 131072, 0, 589814, 131072, 0, 524278, 131072, 0, 458742, 131072, 0, 393206, 131072, 0, 327670, 131072, 0, 262134, 131072, 0, 196598, 131072, 0, 131062, 131072, 0, 65526, 131072, 0, -10, 131072, 0, -65546, 131072, 0, -131082, 131072, 0, -196618, 131072, 0, -262154, 131072, 0, -327690, 131072, 0, -393226, 131072, 0, -458762, 131072, 0, -458761, 131072, 0, -393225, 131072, 0, -327689, 131072, 0, -262153, 131072, 0, -196617, 131072, 0, -131081, 131072, 0, -65545, 131072, 0, -9, 131072, 0, 65527, 131072, 0, 131063, 131072, 0, 196599, 131072, 0, 262135, 131072, 0, 327671, 131072, 0, 393207, 131072, 0, 458743, 131072, 0, 524279, 131072, 0, 589815, 131072, 0, 655351, 131072, 0, 655350, 131072, 0, 655352, 131072, 0, 655353, 131072, 0, 655354, 131072, 0, 655355, 131072, 0, 655356, 131072, 0, 655357, 131072, 0, 655358, 131072, 0, 655359, 131072, 0, 589824, 131072, 0, 589825, 131072, 0, 589826, 131072, 0, 589827, 131072, 0, 589828, 131072, 0, 589829, 131072, 0, 589830, 131072, 0, 589831, 131072, 0, 589832, 131072, 0, 524296, 131072, 0, 458760, 131072, 0, 393224, 131072, 0, 327688, 131072, 0, 262152, 131072, 0, 196616, 131072, 0, 131080, 131072, 0, 65544, 131072, 0, 8, 131072, 0, -65528, 131072, 0, -131064, 131072, 0, -196600, 131072, 0, -262136, 131072, 0, -327672, 131072, 0, -393208, 131072, 0, -458744, 131072, 0, -524280, 131072, 0, -524281, 131072, 0, -524282, 131072, 0, -524283, 131072, 0, -524284, 131072, 0, -524285, 131072, 0, -524286, 131072, 0, -524287, 131072, 0, -524288, 131072, 0, -458753, 131072, 0, -458754, 131072, 0, -458755, 131072, 0, -458756, 131072, 0, -458757, 131072, 0, -458758, 131072, 0, -458759, 131072, 0, -458760, 131072, 0, -524279, 131072, 0, -458743, 131072, 0, -393207, 131072, 0, -327671, 131072, 0, -262135, 131072, 0, -196599, 131072, 0, -131063, 131072, 0, -65527, 131072, 0, 9, 131072, 0, 65545, 131072, 0, 131081, 131072, 0, 196617, 131072, 0, 262153, 131072, 0, 327689, 131072, 0, 393225, 131072, 0, 458761, 131072, 0, 524297, 131072, 0, 589833, 131072, 0, 589834, 131072, 0, 524298, 131072, 0, 458762, 131072, 0, 393226, 131072, 0, 327690, 131072, 0, 262154, 131072, 0, 196618, 131072, 0, 131082, 131072, 0, 65546, 131072, 0, 10, 131072, 0, -65526, 131072, 0, -131062, 131072, 0, -196598, 131072, 0, -262134, 131072, 0, -327670, 131072, 0, -393206, 131072, 0, -458742, 131072, 0, -524278, 131072, 0, -524277, 131072, 0, -458741, 131072, 0, -393205, 131072, 0, -327669, 131072, 0, -262133, 131072, 0, -196597, 131072, 0, -131061, 131072, 0, -65525, 131072, 0, 11, 131072, 0, 65547, 131072, 0, 131083, 131072, 0, 196619, 131072, 0, 262155, 131072, 0, 327691, 131072, 0, 393227, 131072, 0, 458763, 131072, 0, 524299, 131072, 0, 589835, 131072, 0, 589836, 131072, 0, 524300, 131072, 0, 458764, 131072, 0, 393228, 131072, 0, 327692, 131072, 0, 262156, 131072, 0, 196620, 131072, 0, 131084, 131072, 0, 65548, 131072, 0, 12, 131072, 0, -65524, 131072, 0, -131060, 131072, 0, -196596, 131072, 0, -262132, 131072, 0, -327668, 131072, 0, -393204, 131072, 0, -458740, 131072, 0, -524276, 131072, 0, -524275, 131072, 0, -458739, 131072, 0, -393203, 131072, 0, -327667, 131072, 0, -262131, 131072, 0, -196595, 131072, 0, -131059, 131072, 0, -65523, 131072, 0, 13, 131072, 0, 65549, 131072, 0, 131085, 131072, 0, 196621, 131072, 0, 262157, 131072, 0, 327693, 131072, 0, 393229, 131072, 0, 458765, 131072, 0, 524301, 131072, 0, 589837, 131072, 0, 589838, 131072, 0, 524302, 131072, 0, 458766, 131072, 0, 393230, 131072, 0, 327694, 131072, 0, 262158, 131072, 0, 196622, 131072, 0, 131086, 131072, 0, 65550, 131072, 0, 14, 131072, 0, -65522, 131072, 0, -131058, 131072, 0, -196594, 131072, 0, -262130, 131072, 0, -327666, 131072, 0, -393202, 131072, 0, -458738, 131072, 0, -524274, 131072, 0, -524273, 131072, 0, -458737, 131072, 0, -393201, 131072, 0, -327665, 131072, 0, -262129, 131072, 0, -196593, 131072, 0, -131057, 131072, 0, -65521, 131072, 0, 15, 131072, 0, 65551, 131072, 0, 131087, 131072, 0, 196623, 131072, 0, 262159, 131072, 0, 327695, 131072, 0, 393231, 131072, 0, 458767, 131072, 0, 524303, 131072, 0, 589839, 131072, 0)

[node name="ForegroundTileMap" parent="TileMapContainer" instance=ExtResource("2_80cxx")]
layer_0/tile_data = PackedInt32Array(262151, 65536, 0, 196615, 65536, 0, 327687, 65536, 0, 393223, 65536, 0, 458759, 65536, 0, 524295, 65536, 0, 524294, 65536, 0, 524293, 65536, 0, 524292, 65536, 0, 524291, 65536, 0, 524290, 65536, 0, -458749, 65536, 0, -458750, 65536, 0, -458748, 65536, 0, -458747, 65536, 0, -458746, 65536, 0, -458745, 65536, 0, -393209, 65536, 0, -327673, 65536, 0, -262137, 65536, 0, -196601, 65536, 0, -131065, 65536, 0, -65529, 65536, 0, -65544, 65536, 0, -131080, 65536, 0, -196616, 65536, 0, -262152, 65536, 0, -327688, 65536, 0, -393224, 65536, 0, -393223, 65536, 0, -393222, 65536, 0, -393221, 65536, 0, -393220, 65536, 0, -393219, 65536, 0, -393218, 65536, 0, -8, 65536, 0, -2, 0, 0, -65538, 0, 0, -1, 0, 0, -131071, 0, 0, -131067, 0, 0, -196603, 0, 0, -262139, 0, 0, -327675, 0, 0, -327676, 0, 0, -327677, 0, 0, -327678, 0, 0, -327679, 0, 0, -327680, 0, 0, -262145, 0, 0, -262146, 0, 0, -262147, 0, 0, -262148, 0, 0, -262149, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, -5, 0, 0, -65541, 0, 0, -131077, 0, 0, -196613, 0, 0, -196612, 0, 0, -131076, 0, 0, -65540, 0, 0, -131075, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -196605, 0, 0, -196604, 0, 0, -262140, 0, 0, -131068, 0, 0, -65531, 0, 0, 262147, 0, 0, 196611, 0, 0, 196610, 0, 0, 262146, 0, 0, 196612, 0, 0, 131076, 0, 0, 65540, 0, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 0, 0, 262148, 0, 0, 131071, 0, 0, 131070, 0, 0, 65536, 0, 0, 65537, 0, 0, 262140, 0, 0, 196604, 0, 0, 131068, 0, 0, 131067, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 327675, 0, 0, 262139, 0, 0, 196603, 0, 0, 327676, 0, 0, 327677, 0, 0, 262141, 0, 0, 262142, 0, 0, 327678, 0, 0, 327679, 0, 0, 589821, 65536, 0, 589820, 65536, 0, 589819, 65536, 0, 589818, 65536, 0, 589817, 65536, 0, 589816, 65536, 0, 524280, 65536, 0, 458744, 65536, 0, 393208, 65536, 0, 327672, 65536, 0, 262136, 65536, 0, 589822, 65536, 0, 983037, 65536, 0, 983036, 65536, 0, 983038, 65536, 0, 1048575, 65536, 0, 983040, 65536, 0, 983041, 65536, 0, 983042, 65536, 0, 983043, 65536, 0, 983044, 65536, 0, 983045, 65536, 0, 983046, 65536, 0, 983047, 65536, 0, 983048, 65536, 0, 983049, 65536, 0, 983050, 65536, 0, 1376241, 65536, 0, 1376240, 65536, 0, 1376242, 65536, 0, 983025, 65536, 0, 917489, 65536, 0, 917488, 65536, 0, 851952, 65536, 0, 786416, 65536, 0, 1048561, 65536, 0, 720866, 65536, 0, 786402, 65536, 0, 720867, 65536, 0, 655331, 65536, 0, 589795, 65536, 0, 524259, 65536, 0, 1376221, 65536, 0, 1310685, 65536, 0, 1245149, 65536, 0, 1179613, 65536, 0, 1114077, 65536, 0, 1048541, 65536, 0, 983005, 65536, 0, 917469, 65536, 0, 851933, 65536, 0, 786397, 65536, 0, 720861, 65536, 0, 655325, 65536, 0, 589789, 65536, 0, 524253, 65536, 0, 458717, 65536, 0, 393181, 65536, 0, 327645, 65536, 0, 262109, 65536, 0, 196573, 65536, 0, 131037, 65536, 0, 65501, 65536, 0, -35, 65536, 0, -65571, 65536, 0, -131107, 65536, 0, -196643, 65536, 0, -262179, 65536, 0, -327715, 65536, 0, -393251, 65536, 0, -458787, 65536, 0, -524323, 65536, 0, -589859, 65536, 0, -655395, 65536, 0, -720931, 65536, 0, -786467, 65536, 0, -852003, 65536, 0, -917539, 65536, 0, -983075, 65536, 0, -1048611, 65536, 0, -1114147, 65536, 0, -1179683, 65536, 0, -1179682, 65536, 0, -1179681, 65536, 0, -1179680, 65536, 0, -1179679, 65536, 0, -1179678, 65536, 0, -1179677, 65536, 0, -1179676, 65536, 0, -1179675, 65536, 0, -1179674, 65536, 0, -1179673, 65536, 0, -1179672, 65536, 0, -1179671, 65536, 0, -1179670, 65536, 0, -1179669, 65536, 0, -1179668, 65536, 0, -1179667, 65536, 0, -1179666, 65536, 0, -1179665, 65536, 0, -1179664, 65536, 0, -1179663, 65536, 0, -1179662, 65536, 0, -1179661, 65536, 0, -1179660, 65536, 0, -1179659, 65536, 0, -1179658, 65536, 0, -1179657, 65536, 0, -1179656, 65536, 0, -1179655, 65536, 0, -1179654, 65536, 0, -1179653, 65536, 0, -1179652, 65536, 0, -1179651, 65536, 0, -1179650, 65536, 0, -1179649, 65536, 0, -1245184, 65536, 0, -1245183, 65536, 0, -1245182, 65536, 0, -1245181, 65536, 0, -1245180, 65536, 0, -1245179, 65536, 0, -1245178, 65536, 0, -1245177, 65536, 0, -1245176, 65536, 0, -1245175, 65536, 0, -1245174, 65536, 0, -1245173, 65536, 0, -1245172, 65536, 0, -1245171, 65536, 0, -1245170, 65536, 0, -1245169, 65536, 0, -1245168, 65536, 0, -1245167, 65536, 0, -1245166, 65536, 0, -1245165, 65536, 0, -1245164, 65536, 0, -1245163, 65536, 0, -1245162, 65536, 0, -1245161, 65536, 0, -1245160, 65536, 0, -1245159, 65536, 0, -1245158, 65536, 0, -1245157, 65536, 0, -1179621, 65536, 0, -1114085, 65536, 0, -1048549, 65536, 0, -983013, 65536, 0, -917477, 65536, 0, -851941, 65536, 0, -786405, 65536, 0, -720869, 65536, 0, -655333, 65536, 0, -589797, 65536, 0, -524261, 65536, 0, -458725, 65536, 0, -393189, 65536, 0, -327653, 65536, 0, -262117, 65536, 0, -196581, 65536, 0, -131045, 65536, 0, -65509, 65536, 0, 27, 65536, 0, 65563, 65536, 0, 131099, 65536, 0, 196635, 65536, 0, 262171, 65536, 0, 327707, 65536, 0, 393243, 65536, 0, 458779, 65536, 0, 524315, 65536, 0, 589851, 65536, 0, 655387, 65536, 0, 720923, 65536, 0, 786459, 65536, 0, 851995, 65536, 0, 917531, 65536, 0, 983067, 65536, 0, 1048603, 65536, 0, 1114139, 65536, 0, 1179675, 65536, 0, 1245211, 65536, 0, 1310747, 65536, 0, 1376283, 65536, 0, 1441819, 65536, 0, 1507355, 65536, 0, 1507354, 65536, 0, 1507353, 65536, 0, 1507352, 65536, 0, 1507351, 65536, 0, 1507350, 65536, 0, 1507349, 65536, 0, 1507348, 65536, 0, 1507347, 65536, 0, 1507346, 65536, 0, 1507345, 65536, 0, 1507344, 65536, 0, 1507343, 65536, 0, 1507342, 65536, 0, 1507341, 65536, 0, 1507340, 65536, 0, 1507339, 65536, 0, 1507338, 65536, 0, 1507337, 65536, 0, 1507336, 65536, 0, 1507335, 65536, 0, 1507334, 65536, 0, 1507333, 65536, 0, 1507332, 65536, 0, 1507331, 65536, 0, 1507330, 65536, 0, 1507329, 65536, 0, 1507328, 65536, 0, 1572863, 65536, 0, 1572862, 65536, 0, 1572861, 65536, 0, 1572860, 65536, 0, 1572859, 65536, 0, 1572858, 65536, 0, 1572857, 65536, 0, 1572856, 65536, 0, 1572855, 65536, 0, 1572854, 65536, 0, 1572853, 65536, 0, 1572852, 65536, 0, 1572851, 65536, 0, 1572850, 65536, 0, 1572849, 65536, 0, 1572848, 65536, 0, 1572847, 65536, 0, 1572846, 65536, 0, 1572845, 65536, 0, 1572844, 65536, 0, 1572843, 65536, 0, 1572842, 65536, 0, 1572841, 65536, 0, 1572840, 65536, 0, 1572839, 65536, 0, 1572838, 65536, 0, 1572837, 65536, 0, 1572836, 65536, 0, 1572835, 65536, 0, 1572834, 65536, 0, 1572833, 65536, 0, 1572832, 65536, 0, 1572831, 65536, 0, 1572830, 65536, 0, 1572829, 65536, 0, 1507293, 65536, 0, 1441757, 65536, 0)

[node name="EnemySpawner" parent="." instance=ExtResource("6_c8ftd")]

[node name="LevelTimer" type="Timer" parent="."]
wait_time = 80.0
one_shot = true

[node name="StartDelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="InvisibleWalls" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="UpWall" type="CollisionPolygon2D" parent="InvisibleWalls"]
polygon = PackedVector2Array(-18, -96, 34, -96, 34, -112, -18, -112)

[node name="LeftWall" type="CollisionPolygon2D" parent="InvisibleWalls"]
polygon = PackedVector2Array(-128, -1, -112, -1, -112, 51, -128, 49)

[node name="RightWall" type="CollisionPolygon2D" parent="InvisibleWalls"]
polygon = PackedVector2Array(112, -3, 128, -3, 128, 51, 112, 51)

[node name="DownWall" type="CollisionPolygon2D" parent="InvisibleWalls"]
polygon = PackedVector2Array(-19, 144, 35, 144, 35, 128, -19, 128)

[connection signal="timeout" from="StartDelayTimer" to="." method="_on_start_delay_timer_timeout"]
